<resources>
    <string name="app_name">Test App</string>

    <!-- Connect Screen -->
    <string name="action_settings">Settings</string>
    <string name="playout_url">Playout URL</string>
    <string name="nps_url">NPS URL</string>
    <string name="select_backend">Select Backend</string>
    <string name="tenant_id">Tenant ID</string>
    <string name="device_type">Device type</string>
    <string name="device_id">Device ID</string>
    <string name="dont_show_again">Don\'t show again</string>

    <string name="title_select_backend">Select Backend</string>
    <string name="title_select_tenant_id">Select Tenant ID</string>
    <string name="title_select_device_type">Select Device type</string>
    <string name="title_version_outdated">App version is outdated</string>

    <string name="error_version_outdated">Update the app to continue</string>

    <string name="action_reset">Reset</string>
    <string name="action_connect">Connect</string>
    <!-- Connect Screen end -->

</resources>
